@@ -532,7 +532,7 @@ void CGUIWindowVideoPlaylist::OnPopupMenu(int iItem)
     // return to my videos
     else if (btnid == btn_Return)
     {
-      m_gWindowManager.ActivateWindow(WINDOW_VIDEOS);
+      m_gWindowManager.ActivateWindow(WINDOW_VIDEO_FILES);
       return;
     }
   }
